<package>
  <name>hector_exploration_gateway</name>
  <version>0.1.0</version>
  <description>
      hector_exploration_gateway is a node that acts as intermediaire between exploration planner and
      move_base, requesting plans from the former and sending the last pose of the plan to the later.
  </description>

  <maintainer email="jorge@yujinrobot.com">Jorge Santos</maintainer>

  <author>Jorge Santos</author>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_exploration_gateway</url>
  <url type="repository">https://github.com/corot/hector_navigation</url>
  <url type="bugtracker">https://github.com/corot/hector_navigation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>hector_exploration_planner</build_depend>
  <build_depend>hector_nav_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>hector_exploration_planner</run_depend>
  <run_depend>hector_nav_msgs</run_depend>

  <export>
  </export>
</package>